Bug 1125971 - Fixing quotes on /fr/privacy/tips/ and removing extra space before the closing quotation mark

--- a/media/css/privacy/privacy-day.less
+++ b/media/css/privacy/privacy-day.less
@@ -280,6 +280,16 @@ html[lang^='en'] #tips-nav-direct li a span:after {
 }
 
 
+[lang="fr"] .tip aside .quote {
+    &:before{
+        content: "« ";
+        left: -1em;
+    }
+    &:after {
+        content: " »";
+    }
+}
+
 /* 1. ASK section */
 
 .charts {
